--- a/history_en.html
+++ b/history_en.html
@@ -45,7 +45,7 @@
                 <ul>
                     <li>
                         Advisor:
-                        <a href="http://www.infsup.jp/saito/" target="_blank">
+                        <a href="https://norikazu-saito.github.io/p/" target="_blank">
                             Norikazu Saito
                         </a>
                     </li>
