--- a/history_ja.html
+++ b/history_ja.html
@@ -84,7 +84,7 @@
                 <li>
                     2015年4月 - 2018年3月:
                     東京大学大学院 数理科学研究科 博士課程 (指導教官:
-                    <a href="http://www.infsup.jp/saito/" target="_blank">
+                    <a href="https://norikazu-saito.github.io/p/" target="_blank">
                         齊藤 宣一
                     </a>
                     )
@@ -102,7 +102,7 @@
                 <li>
                     2013年4月 - 2015年3月:
                     東京大学大学院 数理科学研究科 修士課程 (指導教官:
-                    <a href="http://www.infsup.jp/saito/" target="_blank">
+                    <a href="https://norikazu-saito.github.io/p/" target="_blank">
                         齊藤 宣一
                     </a>
                     )
