add rel="external noopener noreferrer" to link

--- a/card.html
+++ b/card.html
@@ -68,16 +68,16 @@
             RIES
         </h2>
         <p>
-            Website: <a href="https://www.es.hokudai.ac.jp/", target="_blank">https://www.es.hokudai.ac.jp/</a>
+            Website: <a href="https://www.es.hokudai.ac.jp/" target="_blank" rel="external noopener noreferrer">https://www.es.hokudai.ac.jp/</a>
         </p>
         <h2>
             Yuki Ueda
         </h2>
         <address>
-            E-mail: <a href="mailto: yukiueda@es.hokudai.ac.jp", target="_blank">yukiueda@es.hokudai.ac.jp</a>
+            E-mail: <a href="mailto: yukiueda@es.hokudai.ac.jp" target="_blank" rel="noopener noreferrer">yukiueda@es.hokudai.ac.jp</a>
         </address>
         <p>
-            Website: <br> &emsp; <a href="https://yukiueda90.github.io/mypage/", target="_blank">https://yukiueda90.github.io/mypage/</a>
+            Website: <br> &emsp; <a href="https://yukiueda90.github.io/mypage/" target="_blank" rel="author noopener noreferrer">https://yukiueda90.github.io/mypage/</a>
         </p>
         <div class="center">
             <figure>
