--- a/history_en.html
+++ b/history_en.html
@@ -31,7 +31,7 @@
                 <ul>
                     <li>
                         Host Researcher:
-                        <a href="https://www.tafsm.org/~tezduyar/" target="_blank">
+                        <a href="https://www.tafsm.org/~tezduyar/" target="_blank" rel="external noopener noreferrer">
                             Tayfun E. Tezduyar
                         </a>
                     </li>
@@ -45,7 +45,7 @@
                 <ul>
                     <li>
                         Advisor:
-                        <a href="https://norikazu-saito.github.io/p/" target="_blank">
+                        <a href="https://norikazu-saito.github.io/p/" target="_blank" rel="external noopener noreferrer">
                             Norikazu Saito
                         </a>
                     </li>
@@ -63,7 +63,7 @@
             <ul>
                 <li>
                     Associate Professor,
-                    <a href="https://www.es.hokudai.ac.jp/english/" target="_blank">
+                    <a href="https://www.es.hokudai.ac.jp/english/" target="_blank" rel="external noopener noreferrer">
                         Research Institute for Electronic Science, Hokkaido University
                     </a>,
                     Japan
@@ -75,7 +75,7 @@
                 </ul>
                 <li>
                     Project Assistant Professor,
-                    <a href="https://www.es.hokudai.ac.jp/english/" target="_blank">
+                    <a href="https://www.es.hokudai.ac.jp/english/" target="_blank" rel="external noopener noreferrer">
                         Research Institute for Electronic Science, Hokkaido University
                     </a>,
                     Japan
@@ -86,14 +86,14 @@
                     </li>
                     <li>
                         Host Researcher:
-                        <a href="https://mmc01.es.hokudai.ac.jp/en/" target="_blank">
+                        <a href="https://mmc01.es.hokudai.ac.jp/en/" target="_blank" rel="external noopener noreferrer">
                             Masaharu Nagayama
                         </a>
                     </li>
                 </ul>
                 <li>
                     Project Assistant Professor,
-                    <a href="https://www.ms.u-tokyo.ac.jp/" target="_blank">
+                    <a href="https://www.ms.u-tokyo.ac.jp/" target="_blank" rel="external noopener noreferrer">
                         Graduate School of Mathematical Sciences, The University of Tokyo
                     </a>,
                     Japan
@@ -105,7 +105,7 @@
                 </ul>
                 <li>
                     Junior Researcher,
-                    <a href="https://www.waseda.jp/fsci/en/" target="_blank">
+                    <a href="https://www.waseda.jp/fsci/en/" target="_blank" rel="external noopener noreferrer">
                         Faculty of Science and Engineering, Waseda University
                     </a>,
                     Japan
@@ -117,14 +117,14 @@
 
                     <li>
                         Host Researcher:
-                        <a href="http://www.fluid.sci.waseda.ac.jp/shibata/top.html" target="_blank">
+                        <a href="http://www.fluid.sci.waseda.ac.jp/shibata/top.html" target="_blank" rel="external noopener noreferrer">
                             Yoshihiro Shibata
                         </a>
                     </li>
                 </ul>
                 <li>
                     Postdoctoral Fellow,
-                    <a href="https://www.polyu.edu.hk/ama/" target="_blank">
+                    <a href="https://www.polyu.edu.hk/ama/" target="_blank" rel="external noopener noreferrer">
                         Department of Applied mathematics, The Hong Kong Polytechnic University
                     </a>,
                     Hong Kong
@@ -135,14 +135,14 @@
                     </li>
                     <li>
                         Host Researcher:
-                        <a href="https://www.polyu.edu.hk/ama/profile/byli/" target="_blank">
+                        <a href="https://www.polyu.edu.hk/ama/profile/byli/" target="_blank" rel="external noopener noreferrer">
                             Buyang Li
                         </a>
                     </li>
                 </ul>
                 <li>
                     Project Researcher,
-                    <a href="https://www.ms.u-tokyo.ac.jp/" target="_blank">
+                    <a href="https://www.ms.u-tokyo.ac.jp/" target="_blank" rel="external noopener noreferrer">
                         Graduate School of Mathematical Sciences, The University of Tokyo
                     </a>,
                     Japan
@@ -153,7 +153,7 @@
                     </li>
                     <li>
                         Host Researcher:
-                        <a href="https://www.ms.u-tokyo.ac.jp/~ygiga/" target="_blank">
+                        <a href="https://www.ms.u-tokyo.ac.jp/~ygiga/" target="_blank" rel="external noopener noreferrer">
                             Yoshikazu Giga
                         </a>
                     </li>
@@ -165,7 +165,7 @@
             <ul>
                 <li>
                     Member of
-                    <a href="http://fmsp.ms.u-tokyo.ac.jp/index_e.html" target="_blank">
+                    <a href="http://fmsp.ms.u-tokyo.ac.jp/index_e.html" target="_blank" rel="external noopener noreferrer">
                         Leading Graduate Course for Frontiers of Mathematical Sciences and Physics
                     </a>
                     (The Program for Leading Graduate Schools, MEXT, Japan)
