--- a/card.html
+++ b/card.html
@@ -77,7 +77,7 @@
             E-mail: <a href="mailto: yukiueda@es.hokudai.ac.jp" target="_blank" rel="noopener noreferrer">yukiueda@es.hokudai.ac.jp</a>
         </address>
         <p>
-            Website: <br> &emsp; <a href="https://yukiueda90.github.io/mypage/" target="_blank" rel="author noopener noreferrer">https://yukiueda90.github.io/mypage/</a>
+            Website: <br> &emsp; <a href="https://yukiueda90.github.io/mypage/" target="_blank" rel="noopener noreferrer">https://yukiueda90.github.io/mypage/</a>
         </p>
         <div class="center">
             <figure>
