omit rel="external"

--- a/card.html
+++ b/card.html
@@ -68,7 +68,7 @@
             RIES
         </h2>
         <p>
-            Website: <a href="https://www.es.hokudai.ac.jp/" target="_blank" rel="external noopener noreferrer">https://www.es.hokudai.ac.jp/</a>
+            Website: <a href="https://www.es.hokudai.ac.jp/" target="_blank" rel="noopener noreferrer">https://www.es.hokudai.ac.jp/</a>
         </p>
         <h2>
             Yuki Ueda
