--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             <h2>上田 祐暉</h2>
             <p>博士(数理科学)</p>
             <p>
-                <a href="http://mmc01.es.hokudai.ac.jp/msc/" target="_blank" rel="external noopener noreferrer">
+                <a href="http://mmc01.es.hokudai.ac.jp/msc/" target="_blank" rel="noopener noreferrer">
                     北海道大学 電子科学研究所 付属社会創造数学研究センター
                 </a> 
                 &nbsp;
-                <a href="http://mmc01.es.hokudai.ac.jp/" target="_blank" rel="external noopener noreferrer">
+                <a href="http://mmc01.es.hokudai.ac.jp/" target="_blank" rel="noopener noreferrer">
                     人間数理研究分野
                 </a> 
                 &nbsp;
@@ -45,10 +45,10 @@
             <p>Ph.D. Mathematical Sciences</p>
             <p>
                 Associate Professor, 
-                <a href="http://mmc01.es.hokudai.ac.jp/" target="_blank" rel="external noopener noreferrer">
+                <a href="http://mmc01.es.hokudai.ac.jp/" target="_blank" rel="noopener noreferrer">
                     Laboratory of Mathematical Modeling
                 </a>,
-                <a href="http://mmc01.es.hokudai.ac.jp/msc/" target="_blank" rel="external noopener noreferrer">
+                <a href="http://mmc01.es.hokudai.ac.jp/msc/" target="_blank" rel="noopener noreferrer">
                     Research Center of Mathematics for Social Creativity,
                     Research Institute for Electronic Science, 
                     Hokkaido University
@@ -65,19 +65,19 @@
         </p>
         <p>
             ORCID: 
-            <a href="https://orcid.org/0000-0002-0343-8417" target="_blank" rel="external noopener noreferrer"> 
+            <a href="https://orcid.org/0000-0002-0343-8417" target="_blank" rel="noopener noreferrer"> 
                 https://orcid.org/0000-0002-0343-8417 
             </a>
         </p>
         <p>
             ResearchGate: 
-            <a href="https://www.researchgate.net/profile/Yuki_Ueda2" target="_blank" rel="external noopener noreferrer"> 
+            <a href="https://www.researchgate.net/profile/Yuki_Ueda2" target="_blank" rel="noopener noreferrer"> 
                 https://www.researchgate.net/profile/Yuki_Ueda2 
             </a>
         </p>
         <p>
             researchmap:
-            <a href="https://researchmap.jp/yukiueda_am" target="_blank" rel="external noopener noreferrer">
+            <a href="https://researchmap.jp/yukiueda_am" target="_blank" rel="noopener noreferrer">
                 https://researchmap.jp/yukiueda_am
             </a>
         </p>
