--- a/history_ja.html
+++ b/history_ja.html
@@ -35,7 +35,7 @@
                 <li>
                     2023年10月 - 2025年5月:
                     北海道大学 電子科学研究所 特任助教 (受け入れ教員:
-                        <a href="https://mmc01.es.hokudai.ac.jp/" target="_blank" rel="external noopener noreferrer">
+                        <a href="https://mmc01.es.hokudai.ac.jp/" target="_blank" rel="noopener noreferrer">
                             長山 雅晴
                         </a>
                     )
@@ -43,7 +43,7 @@
                 <li>
                     2021年7月 - 2023年9月:
                     東京大学大学院 数理科学研究科 特任助教 (
-                    <a href="https://www.ms.u-tokyo.ac.jp/icms/_2018420213_2020.html" target="_blank" rel="external noopener noreferrer">
+                    <a href="https://www.ms.u-tokyo.ac.jp/icms/_2018420213_2020.html" target="_blank" rel="noopener noreferrer">
                         社会連携講座
                     </a>
                     『冷媒熱流体の数理』)
@@ -51,7 +51,7 @@
                 <li>
                     2020年4月 - 2021年6月:
                     早稲田大学 理工学術院 次席研究員 (受け入れ教員:
-                    <a href="http://www.fluid.sci.waseda.ac.jp/shibata/top.html" target="_blank" rel="external noopener noreferrer">
+                    <a href="http://www.fluid.sci.waseda.ac.jp/shibata/top.html" target="_blank" rel="noopener noreferrer">
                         柴田 良弘
                     </a>
                     )
@@ -59,7 +59,7 @@
                 <li>
                     2019年4月 - 2020年3月:
                     香港理工大学 Postdoctoral Fellow (受け入れ教員:
-                    <a href="https://www.polyu.edu.hk/ama/profile/byli/" target="_blank" rel="external noopener noreferrer">
+                    <a href="https://www.polyu.edu.hk/ama/profile/byli/" target="_blank" rel="noopener noreferrer">
                         Buyang Li
                     </a>
                     )
@@ -67,7 +67,7 @@
                 <li>
                     2018年4月 - 2019年3月:
                     東京大学大学院 数理科学研究科 特任研究員 (受け入れ教員:
-                    <a href="https://www.ms.u-tokyo.ac.jp/~ygiga/" target="_blank" rel="external noopener noreferrer">
+                    <a href="https://www.ms.u-tokyo.ac.jp/~ygiga/" target="_blank" rel="noopener noreferrer">
                         儀我 美一
                     </a>
                     )
@@ -75,7 +75,7 @@
                 <ul>
                     <li>
                         雇用元の課題名: 基盤(S) 「
-                        <a href="https://www.ms.u-tokyo.ac.jp/~ygiga/kiban2014-j/index.html" target="_blank" rel="external noopener noreferrer">
+                        <a href="https://www.ms.u-tokyo.ac.jp/~ygiga/kiban2014-j/index.html" target="_blank" rel="noopener noreferrer">
                             特異構造が支配する非線形現象の高度形態変動解析
                         </a>
                         」
@@ -84,7 +84,7 @@
                 <li>
                     2015年4月 - 2018年3月:
                     東京大学大学院 数理科学研究科 博士課程 (指導教官:
-                    <a href="https://norikazu-saito.github.io/p/" target="_blank" rel="external noopener noreferrer">
+                    <a href="https://norikazu-saito.github.io/p/" target="_blank" rel="noopener noreferrer">
                         齊藤 宣一
                     </a>
                     )
@@ -93,7 +93,7 @@
                     <li>
                         2016年11月 - 2017年1月:
                         Rice University (受入教官:
-                        <a href="https://www.tafsm.org/~tezduyar/" target="_blank" rel="external noopener noreferrer">
+                        <a href="https://www.tafsm.org/~tezduyar/" target="_blank" rel="noopener noreferrer">
                             Tayfun E. Tezduyar
                         </a>
                         )
@@ -102,7 +102,7 @@
                 <li>
                     2013年4月 - 2015年3月:
                     東京大学大学院 数理科学研究科 修士課程 (指導教官:
-                    <a href="https://norikazu-saito.github.io/p/" target="_blank" rel="external noopener noreferrer">
+                    <a href="https://norikazu-saito.github.io/p/" target="_blank" rel="noopener noreferrer">
                         齊藤 宣一
                     </a>
                     )
@@ -132,7 +132,7 @@
             <ul>
                 <li>
                     2015年4月 - 2018年3月:
-                    <a href="http://fmsp.ms.u-tokyo.ac.jp/" target="_blank" rel="external noopener noreferrer">
+                    <a href="http://fmsp.ms.u-tokyo.ac.jp/" target="_blank" rel="noopener noreferrer">
                         数物フロンティア・リーディング大学院(FMSP)
                     </a>
                     コース生 (副指導教官: 山本 昌宏)
@@ -151,7 +151,7 @@
                 </li>
                 <ul>
                     <li>『
-                        <a href="https://kaken.nii.ac.jp/ja/grant/KAKENHI-PROJECT-21K13840/" target="_blank" rel="external noopener noreferrer">
+                        <a href="https://kaken.nii.ac.jp/ja/grant/KAKENHI-PROJECT-21K13840/" target="_blank" rel="noopener noreferrer">
                             流体問題の数値計算手法におけるパラメータの選択について
                         </a>
                         』(No.21K13840)
