--- a/history_ja.html
+++ b/history_ja.html
@@ -92,7 +92,7 @@
                 <ul>
                     <li>
                         2016年11月 - 2017年1月:
-                        Rice University (受入教官:
+                        Rice University (受け入れ教員:
                         <a href="https://www.tafsm.org/~tezduyar/" target="_blank" rel="noopener noreferrer">
                             Tayfun E. Tezduyar
                         </a>
