--- a/index.html
+++ b/index.html
@@ -27,11 +27,15 @@
             <h2>上田 祐暉</h2>
             <p>博士(数理科学)</p>
             <p>
-                <a href="http://mmc01.es.hokudai.ac.jp/msc/" target="_blank" rel="noopener noreferrer">
-                    北海道大学 電子科学研究所 付属社会創造数学研究センター
+                <a href="https://www.es.hokudai.ac.jp/" target="_blank" rel="noopener noreferrer">
+                    北海道大学 電子科学研究所
                 </a> 
                 &nbsp;
-                <a href="http://mmc01.es.hokudai.ac.jp/" target="_blank" rel="noopener noreferrer">
+                <a href="https://mmc01.es.hokudai.ac.jp/msc/" target="_blank" rel="noopener noreferrer">
+                    付属社会創造数学研究センター
+                </a> 
+                &nbsp;
+                <a href="https://mmc01.es.hokudai.ac.jp/" target="_blank" rel="noopener noreferrer">
                     人間数理研究分野
                 </a> 
                 &nbsp;
@@ -45,11 +49,15 @@
             <p>Ph.D. Mathematical Sciences</p>
             <p>
                 Associate Professor, 
-                <a href="http://mmc01.es.hokudai.ac.jp/" target="_blank" rel="noopener noreferrer">
+                <a href="https://mmc01.es.hokudai.ac.jp/en/" target="_blank" rel="noopener noreferrer">
                     Laboratory of Mathematical Modeling
                 </a>,
-                <a href="http://mmc01.es.hokudai.ac.jp/msc/" target="_blank" rel="noopener noreferrer">
+                &nbsp;
+                <a href="https://mmc01.es.hokudai.ac.jp/msc/en/" target="_blank" rel="noopener noreferrer">
                     Research Center of Mathematics for Social Creativity,
+                </a>
+                &nbsp;
+                <a href="https://www.es.hokudai.ac.jp/english/" target="_blank" rel="noopener noreferrer">
                     Research Institute for Electronic Science, 
                     Hokkaido University
                 </a>
