--- a/papers.html
+++ b/papers.html
@@ -176,6 +176,14 @@
             <h2>発表 / Talks</h2>
             <ul>
                 <li>
+                    <u>上田祐暉</u>, Eom Junyong, 内海晋弥, 野田裕真, 水藤寛, 片桐秀樹, 長山雅晴,
+                    グルコース- インスリン代謝動態モデルの構築とパラメータ推定,
+                    <a href="https://www.jsces.org/koenkai/30/">
+                        第30回計算工学講演会
+                    </a>,
+                    ソニックシティ, 埼玉県, 2025年6月
+                </li>
+                <li>
                     <u>Yuki Ueda</u>,
                     Survey and Application of Bayesian Inference to Inverse Problem,
                     <a href="https://www.waseda.jp/fsci/mathphys/news/19559" target="_blank" rel="noopener noreferrer">
