--- a/papers.html
+++ b/papers.html
@@ -144,6 +144,14 @@
             <h3>査読無し / Non Peer-reviewed</h3>
             <ul>
                 <li>
+                    上田祐暉, Eom Junyong, 内海晋弥, 野田裕真, 水藤寛, 片桐秀樹, 長山雅晴,
+                    グルコース- インスリン代謝動態モデルの構築とパラメータ推定,
+                    <a href="https://www.jsces.org/koenkai/30/" target="_blank" rel="noopener noreferrer">
+                        計算工学講演会論文集
+                    </a>,
+                    Vol. 30 (2025)
+                </li>
+                <li>
                     Y. Giga and Y. Ueda*.
                     <i>
                         Split Bregman method に基づく4階の全変動流問題に対する数値計算.
@@ -178,7 +186,7 @@
                 <li>
                     <u>上田祐暉</u>, Eom Junyong, 内海晋弥, 野田裕真, 水藤寛, 片桐秀樹, 長山雅晴,
                     グルコース- インスリン代謝動態モデルの構築とパラメータ推定,
-                    <a href="https://www.jsces.org/koenkai/30/">
+                    <a href="https://www.jsces.org/koenkai/30/" target="_blank" rel="noopener noreferrer">
                         第30回計算工学講演会
                     </a>,
                     ソニックシティ, 埼玉県, 2025年6月
