--- a/papers.html
+++ b/papers.html
@@ -29,6 +29,19 @@
             <p>Published</p>
             <ul>
                 <li>
+                    Y. Giga* and Y. Ueda.
+                    <i>
+                        On a diffusion equation with rupture.
+                    </i>
+                    <a href="https://projecteuclid.org/journals/differential-and-integral-equations" target="_blank" rel="noopener noreferrer">
+                        Differential and Integral Equations
+                    </a>,
+                    Vol. 38 No. 9/10 (2025) 595--618
+                    [<a href="https://projecteuclid.org/journals/differential-and-integral-equations/volume-38/issue-9_2f_10/On-a-diffusion-equation-with-rupture/10.57262/die038-0910-595.full" target="_blank" rel="noopener noreferrer" >
+                        Journal
+                    </a>]
+                </li>
+                <li>
                     B. Li*, M. Shu and Y. Ueda.
                     <i>
                         Analysis of fully discrete finite element methods for 2D Navier-Stokes equations with critical
@@ -51,7 +64,7 @@
                     <a href="https://www.worldscientific.com/worldscinet/m3as" target="_blank" rel="noopener noreferrer">
                         Mathematical Models and Methods in Applied Sciences (M3AS)
                     </a>,
-                    Vol30, No.11 (2020) 2139--2174
+                    Vol. 30, No. 11 (2020) 2139--2174
                     [<a href="https://www.worldscientific.com/doi/abs/10.1142/S0218202520500402" target="_blank" rel="noopener noreferrer">
                         Journal
                     </a>]
@@ -64,7 +77,7 @@
                     <a href="https://epubs.siam.org/" target="_blank">
                         SIAM Journal on Numerical Analysis (SIAM J. Numer. Anal.)
                     </a>,
-                    Vol.58, Issue 5 (2020) 2736--2763
+                    Vol. 58, Issue 5 (2020) 2736--2763
                     [<a href="https://epubs.siam.org/doi/abs/10.1137/19M1296136" target="_blank" rel="noopener noreferrer">
                         Journal
                     </a>]
@@ -77,7 +90,7 @@
                     <a href="https://www.sciencedirect.com/journal/journal-of-computational-physics" target="_blank" rel="noopener noreferrer">
                         Journal of Computational Physics (J. Comput. Phys.)
                     </a>,
-                    Vol405 (2020) 109114--109137
+                    Vol. 405 (2020) 109114--109137
                     [<a href="https://www.sciencedirect.com/science/article/pii/S0021999119308198?via%3Dihub" target="_blank" rel="noopener noreferrer">
                         Journal
                     </a>]
