--- a/papers.html
+++ b/papers.html
@@ -158,7 +158,7 @@
             <ul>
                 <li>
                     上田祐暉, Eom Junyong, 内海晋弥, 野田裕真, 水藤寛, 片桐秀樹, 長山雅晴,
-                    グルコース- インスリン代謝動態モデルの構築とパラメータ推定,
+                    グルコース - インスリン代謝動態モデルの構築とパラメータ推定,
                     <a href="https://www.jsces.org/koenkai/30/" target="_blank" rel="noopener noreferrer">
                         計算工学講演会論文集
                     </a>,
@@ -196,6 +196,12 @@
         <section>
             <h2>発表 / Talks</h2>
             <ul>
+                <li>
+                    Yoshikazu Giga, <u>Yuki Ueda</u>,
+                    Numerical computations of split Bregman method for fourth-order total variation flow,
+                    8th Joint Conference of A3 Foresight Program on Computational and Applied Mathematics, 
+                    Yanji, China, August 2025.
+                </li>
                 <li>
                     <u>上田祐暉</u>, Eom Junyong, 内海晋弥, 野田裕真, 水藤寛, 片桐秀樹, 長山雅晴,
                     グルコース- インスリン代謝動態モデルの構築とパラメータ推定,
@@ -264,7 +270,7 @@
                     Yoshikazu Giga, <u>Yuki Ueda</u>,
                     Time periodic profile on a diffusion equation model to describe a bubble cluster with rupture,
                     Workshop on Numerical Methods and Analysis for PDEs,
-                    Harbin Institute of Technology, Shenzhen, Cina, June 2024
+                    Harbin Institute of Technology, Shenzhen, China, June 2024
                 </li>
                 <li>
                     Yoshikazu Giga, <u>Yuki Ueda</u>,
@@ -272,7 +278,7 @@
                     <a href="https://ec-convention.com/maifb2024/" target="_blank" rel="noopener noreferrer">
                         The 81st Fujihara Seminar, Mathematical Aspects for Interfaces and Free Boundaries 2024
                     </a>,
-                    Hilton Niseko Village, Hokkaido, Japan June 2024
+                    Hilton Niseko Village, Hokkaido, Japan, June 2024
                 </li>
                 <li>
                     Yoshikazu Giga, <u>Yuki Ueda</u>,
