--- a/papers.html
+++ b/papers.html
@@ -199,14 +199,16 @@
                 <li>
                     Yoshikazu Giga, <u>Yuki Ueda</u>,
                     Numerical computations of split Bregman method for fourth-order total variation flow,
-                    8th Joint Conference of A3 Foresight Program on Computational and Applied Mathematics, 
+                    <a href="https://m.csiam.org.cn/1005/202506/2424.html" target="_blank" rel="noopener noreferrer"> 
+                        8th Joint Conference of A3 Foresight Program on Computational and Applied Mathematics
+                    </a>, 
                     Yanji, China, August 2025.
                 </li>
                 <li>
                     <u>上田祐暉</u>, Eom Junyong, 内海晋弥, 野田裕真, 水藤寛, 片桐秀樹, 長山雅晴,
                     グルコース- インスリン代謝動態モデルの構築とパラメータ推定,
                     <a href="https://www.jsces.org/koenkai/30/" target="_blank" rel="noopener noreferrer">
-                        第30回計算工学講演会
+                        第30回計算工学講演会,
                     </a>,
                     ソニックシティ, 埼玉県, 2025年6月
                 </li>
@@ -215,7 +217,7 @@
                     Survey and Application of Bayesian Inference to Inverse Problem,
                     <a href="https://www.waseda.jp/fsci/mathphys/news/19559" target="_blank" rel="noopener noreferrer">
                         International Workshop on Multiphase Flows: Analysis, Modelling and Numerics
-                    </a>
+                    </a>,
                     Waseda University, January 2025
                 </li>
                 <li>
