add about personal information

--- a/history_ja.html
+++ b/history_ja.html
@@ -26,6 +26,14 @@
             <a href="history_en.html">English</a>
         </h2>
         <section>
+            <ul>
+                <li>上田 祐暉 (ウエダ ユウキ)</li>
+                <li>1990年生</li>
+                <li>国籍: 日本</li>
+                <li>所属学会: 日本数学会, 日本応用数理学会</li>
+            </ul>
+        </section>
+        <section>
             <h2>学歴, 職歴</h2>
             <ul>
                 <li>
@@ -146,7 +154,7 @@
             <h2>プロジェクト</h2>
             <ul>
                 <li>
-                    2021年 - 2026年:
+                    2021年度 - 2025年度:
                     科学研究費助成費用 若手研究
                 </li>
                 <ul>
