--- a/papers.html
+++ b/papers.html
@@ -191,6 +191,22 @@
             <h2>発表 / Talks</h2>
             <ul>
                 <li>
+                    上田祐暉, 
+                    移流拡散方程式に対するSUPGパラメータの実験的探索,
+                    <a href="https://www.hpc.itc.nagoya-u.ac.jp/rims2025/" target="_blank" rel="noopener noreferrer"> 
+                        RIMS共同研究 (公開型) 数値解析が切り開く新たな情報社会 〜データ駆動型から「富岳NEXT」〜
+                    </a>,
+                    京都大学, 2025年10月.
+                </li>
+                <li>
+                    Yoshikazu Giga, <u>Yuki Ueda</u>,
+                    Numerical computations of split Bregman method for fourth-order total variation flow,
+                    <a href="https://norikazu-saito.github.io/p/cj2025/" target="_blank" rel="noopener noreferrer"> 
+                        Current Status and New Development in the Theoretical Analysis for the Discrete Models of Partial Differential Equations
+                    </a>, 
+                    Chengdu, China, September 2025.
+                </li>
+                <li>
                     Yoshikazu Giga, <u>Yuki Ueda</u>,
                     Numerical computations of split Bregman method for fourth-order total variation flow,
                     <a href="https://m.csiam.org.cn/1005/202506/2424.html" target="_blank" rel="noopener noreferrer"> 
