add about academic society

--- a/history_ja.html
+++ b/history_ja.html
@@ -30,7 +30,6 @@
                 <li>上田 祐暉 (ウエダ ユウキ)</li>
                 <li>1990年生</li>
                 <li>国籍: 日本</li>
-                <li>所属学会: 日本数学会, 日本応用数理学会</li>
             </ul>
         </section>
         <section>
@@ -167,6 +166,22 @@
                 </ul>
             </ul>
         </section>
+
+        <section>
+            <h2>学会</h2>
+            <ul>
+                <li>
+                    日本数学会 
+                </li>
+                <li>
+                    日本応用数理学会
+                    <ul>
+                        <li>総務委員会委員 (2025年10月 - )</li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+
         <section>
             <h2>教育実績</h2>
             <ul>
