add a presentation (as a comment)

--- a/papers.html
+++ b/papers.html
@@ -190,6 +190,12 @@
         <section>
             <h2>発表 / Talks</h2>
             <ul>
+                <!-- <li>
+                    上田 祐暉, 内海 晋弥, 野田 裕真, 水藤 寛, 片桐 秀樹, 長山 雅晴,
+                    グルコース-インスリン値を再現する Sorensen モデルの検討と改善案,
+                    ムーンショット目標2 第3回バイオ数理連携会議 (非公開), 
+                    東京, 2025年12月.
+                </li> -->
                 <li>
                     上田祐暉, 
                     移流拡散方程式に対するSUPGパラメータの実験的探索,
