--- a/papers.html
+++ b/papers.html
@@ -190,6 +190,14 @@
         <section>
             <h2>発表 / Talks</h2>
             <ul>
+                <li>
+                    上田祐暉,
+                    移流拡散方程式に対するSUPGパラメータの実験的探索,
+                    <a href="https://www.mathsoc.jp/section/appliedmath/CAM/2025/" target="_blank" rel="noopener noreferrer"> 
+                        2025年度応用数学合同研究集会
+                    </a>,
+                    龍谷大学, 2025年12月
+                </li>
                 <!-- <li>
                     上田 祐暉, 内海 晋弥, 野田 裕真, 水藤 寛, 片桐 秀樹, 長山 雅晴,
                     グルコース-インスリン値を再現する Sorensen モデルの検討と改善案,
@@ -202,7 +210,7 @@
                     <a href="https://www.hpc.itc.nagoya-u.ac.jp/rims2025/" target="_blank" rel="noopener noreferrer"> 
                         RIMS共同研究 (公開型) 数値解析が切り開く新たな情報社会 〜データ駆動型から「富岳NEXT」〜
                     </a>,
-                    京都大学, 2025年10月.
+                    京都大学, 2025年10月
                 </li>
                 <li>
                     Yoshikazu Giga, <u>Yuki Ueda</u>,
@@ -210,7 +218,7 @@
                     <a href="https://norikazu-saito.github.io/p/cj2025/" target="_blank" rel="noopener noreferrer"> 
                         Current Status and New Development in the Theoretical Analysis for the Discrete Models of Partial Differential Equations
                     </a>, 
-                    Chengdu, China, September 2025.
+                    Chengdu, China, September 2025
                 </li>
                 <li>
                     Yoshikazu Giga, <u>Yuki Ueda</u>,
@@ -218,7 +226,13 @@
                     <a href="https://m.csiam.org.cn/1005/202506/2424.html" target="_blank" rel="noopener noreferrer"> 
                         8th Joint Conference of A3 Foresight Program on Computational and Applied Mathematics
                     </a>, 
-                    Yanji, China, August 2025.
+                    Yanji, China, August 2025
+                </li>
+                <li>
+                    上田祐暉,
+                    L^1 正則化問題に対する split Bregman 法とその応用例,
+                    応用数学交流研究会 2025 (夏),
+                    北海道大学, 2025年8月
                 </li>
                 <li>
                     <u>上田祐暉</u>, Eom Junyong, 内海晋弥, 野田裕真, 水藤寛, 片桐秀樹, 長山雅晴,
