--- a/papers.html
+++ b/papers.html
@@ -191,6 +191,14 @@
             <h2>発表 / Talks</h2>
             <ul>
                 <li>
+                    Yuki Ueda, 
+                    Numerical computations of split Bregman method for fourth-order total variation flow,
+                    <a href="https://sites.google.com/view/finland-japan-workshop-iam/home" target="_blank" rel="noopener noreferrer">
+                        Finland-Japan Workshop in Industrial and Applied Mathematics
+                    </a>,
+                    Josai University, Tokyo, Japan, January 2026
+                </li>
+                <li>
                     上田祐暉,
                     移流拡散方程式に対するSUPGパラメータの実験的探索,
                     <a href="https://www.mathsoc.jp/section/appliedmath/CAM/2025/" target="_blank" rel="noopener noreferrer"> 
