--- a/papers.html
+++ b/papers.html
@@ -191,6 +191,14 @@
             <h2>発表 / Talks</h2>
             <ul>
                 <li>
+                    上田祐暉,
+                    勾配流の数値計算における凸最適化理論の応用,
+                    <a href="https://www.math.kyoto-u.ac.jp/ja/event/seminar/5907" target="_blank" rel="noopener noreferrer">
+                        京都大学応用数学セミナー
+                    </a>, 
+                    京都大学, 2026年1月
+                </li>
+                <li>
                     Yuki Ueda, 
                     Numerical computations of split Bregman method for fourth-order total variation flow,
                     <a href="https://sites.google.com/view/finland-japan-workshop-iam/home" target="_blank" rel="noopener noreferrer">
