add about mathsoc

--- a/history_ja.html
+++ b/history_ja.html
@@ -172,6 +172,9 @@
             <ul>
                 <li>
                     日本数学会 
+                    <ul>
+                        <li>2026年度全国区代議員 (2026年3月 - 2027年2月)</li>
+                    </ul>
                 </li>
                 <li>
                     日本応用数理学会
@@ -186,7 +189,7 @@
             <h2>教育実績</h2>
             <ul>
                 <li>
-                    線形代数学I, 北海道大学 全学教育科目 (基礎科目), 2024 - 現在
+                    線形代数学I, 北海道大学 全学教育科目 (基礎科目), 2024 - 2025
                 </li>
                 <li>
                     数学B1(微分積分), 早稲田大学先進理工学部, 2021
